@@ -1,23 +1,22 @@
 buildscript {
-    ext.kotlin_version = '1.7.20'
+    ext.kotlin_version = '1.9.10'
     repositories {
         maven {
             url "https://plugins.gradle.org/m2/"
         }
     }
     dependencies {
-        classpath "gradle.plugin.org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.12.0"
+        classpath "gradle.plugin.org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.12.2"
         classpath 'net.researchgate:gradle-release:3.0.2'
-        classpath "com.github.ben-manes:gradle-versions-plugin:0.43.0"
+        classpath "com.github.ben-manes:gradle-versions-plugin:0.48.0"
         classpath "gradle.plugin.com.github.jengelman.gradle.plugins:shadow:7.0.0"
-        classpath "com.diffplug.spotless:spotless-plugin-gradle:6.11.0"
+        classpath "com.diffplug.spotless:spotless-plugin-gradle:6.22.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 plugins {
-    id "org.sonarqube" version "3.5.0.2730"
-    id "me.champeau.jmh" version "0.6.8"
+    id "org.sonarqube" version "4.4.0.3356"
 }
 
 sonarqube {
@@ -87,20 +86,20 @@ subprojects {
     apply plugin: "com.diffplug.spotless"
 
     java {
-        sourceCompatibility = JavaVersion.VERSION_19
-        targetCompatibility = JavaVersion.VERSION_19
+        sourceCompatibility = JavaVersion.VERSION_20
+        targetCompatibility = JavaVersion.VERSION_20
         withSourcesJar()
         withJavadocJar()
 
         if (JavaVersion.current() != targetCompatibility) {
-            throw new GradleException("This build must be run with Java " + targetCompatibility.toString())
+            throw new GradleException(JavaVersion.current().toString()+ targetCompatibility.toString())
         }
     }
 
     javadoc {
         failOnError = false
         options {
-            addStringOption('-release', '19')
+            addStringOption('-release', '20')
             addBooleanOption('-enable-preview', true)
         }
     }
@@ -196,8 +195,10 @@ subprojects {
 
     ext.isReleaseVersion = !rootProject.getProperties().version.endsWith('SNAPSHOT')
 
-    tasks.withType(Sign) {
-        onlyIf { isReleaseVersion }
+    tasks.withType(Sign).tap {
+        configureEach {
+            onlyIf { isReleaseVersion }
+        }
     }
 
     signing {
@@ -227,8 +228,10 @@ subprojects {
 
     publishing.publications.maven.artifact(testsJar)
 
-    tasks.withType(JavaCompile) {
-        options.encoding = 'UTF-8'
+    tasks.withType(JavaCompile).tap {
+        configureEach {
+            options.encoding = 'UTF-8'
+        }
     }
 
     test {
@@ -248,11 +251,21 @@ subprojects {
                  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
                  "--add-opens=java.base/java.io=ALL-UNNAMED",
                  "--add-opens=java.base/java.util=ALL-UNNAMED",
-                 "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
-        ])
+                 "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+                // "-XX:+UseZGC",
+                 "-XX:+UnlockExperimentalVMOptions",
+                 "-XX:+AlwaysPreTouch",
+                 "-XX:+UseLargePages",
+                 "-XX:+DisableExplicitGC",
+                 "-XX:ReservedCodeCacheSize=1000m",
+                 "-XX:+UnlockDiagnosticVMOptions",
+               //  "-XX:+PrintInlining",
+                 "-XX:EliminateAllocationArraySizeLimit=1024",
+                 "-Ddisable.thread.safety=true"
+                /* "-XX:MaxInlineSize=500" */])
 
-        minHeapSize = '2g'
-        maxHeapSize = '7g'
+        minHeapSize = '5g'
+        maxHeapSize = '8g'
     }
 }
 
